2010-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: Fix boolean condition to fail parameter validation if any
	validation fails. Fixes a crash with txd39CC.

2010-04-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp:
	* Makefile.am: Build lunar-launcher too.

2010-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp|h.in: Handle a call to TransformXY and print a warning
	about non-implemented method. Otherwise we'll get a hard to track down html
	bridge exception later on.

2010-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.h: Add P/Invoke to get the NPWindow - this is used by oob tests to
	p/invoke libshocker to get the screen location of the oob application.

2010-04-14  Jeffrey Stedfast  <fejj@novell.com>

	* plugin-class.cpp (MoonlightGlyphsInvoke): Implemented js binding
	for setFontSource().

2010-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Update with new files.

2010-04-09  Andreia Gaita  <avidigal@novell.com>

	* browser-bridge.h: fix premature abortion due to missing
	initialization

2010-04-01  Alan McGovern  <amcgovern@novell.com>

	* plugin-class.cpp: Rename MediaState to MediaElementState so
	  that our managed->native interop doesn't require a special
	  case for this enum.

2010-04-01  Alan McGovern  <amcgovern@novell.com>

	* plugin-class.cpp: MediaElement::CurrentState is an enum as
	  we can't call ->AsInt32 () on it anymore.

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* plugin-class.cpp: Update
	  MoonlightDependencyObjectObject::GetProperty to check if the
	  value is of Type::ENUM and then calling enums_int_to_str if
	  that is true. Fixes some regressions.

2010-03-29  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (PluginInstance::LoadXAP): call SetXapFilename before
	calling InitializeManagedDeployment.

2010-03-22  Andreia Gaita  <avidigal@novell.com>

	* browser-bridge.h: Add Shutdown method