@@ -95,6 +95,15 @@ general_transform_transform_point (GeneralTransform *t, Point *p, Point *r)
 	*r = t->Transform (*p);
 }
 
+Point*
+GeneralTransform::TransformXYWithError (int x, int y, MoonError *error)
+{
+	Point* p = new Point ((double)x, (double)y);
+	*p = Transform (*p);
+	return p;
+}
+
+
 
 //
 // RotateTransform
